# gameProj

./: .gitattributes  .gitignore  LoadButton.gd  LoadButton.tscn  LoadMenu.gd  LoadMenu.tscn  MainMenu.gd  Player.gd  Player.tscn  World.tscn  coin.tscn  default_bus_layout.tres  icon.svg.import  player_position_x.gd  project.godot  rust.gdextension  try.tscn
Collectibles/: coin.tscn
Player/: Player.gd  Players.gd
SaveAndLoad/: LoadMenu.gd  SaveManager.gd
UserInterface/: WorldCreation.gd  WorldCreation.tscn
examples/: BACKUP.rs  example_terrrain.rs  get_node.rs  inventory.rs
gdscript_code_before_rust/: SaveManager.gd  Tile_map.gd  World.gd  World.tscn  nakama.gd  pet.gd
godot/: FpsCounter.gd  FpsCounter.gd.uid  MainMenu.tscn  Tile_map.gd  TouchControls.tscn  UpgradeLog.htm  Wor2F58.tmp  WorF8DE.tmp  World.gd  World.gd.uid  World.scn  World.tscn  character_body_3d.gd  item_slot.gd.uid  node_2d_rust.gd  node_2d_rust.tscn  node_3d.tscn  player_node.tscn  proj.csproj  proj.sln  project.godot  rust.gdextension  rust.gdextension.uid  terrain_1.tscn
nakama-docker/: .cookie
rust/: Cargo.toml
rust/.github/workflows/: gitinspector.yml
rust/src/: build.rs  control.rs  control_node.rs  example.rs  example_terrrain.rs  heart.rs  heart_display.rs  igor.rs  inv_slot.rs  inventory.rs  item_collectibles.rs  item_slot.rs  lib.rs  main_node.rs  multiplayer.rs  multiplayer_scene.rs  node2d.rs  node_manager.rs  pet.rs  rustplayer.rs  save_manager_rusts.rs  terra.rs  terrain.rs  terrain_generation.rs  trial.rs  world.rs
scripts/: install-hooks.bat  pre-push
(+378 files in other folders)
