[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
tch = "0.19.0"
rand = "0.9.0"
ndarray = "0.16.1"






