[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
godot = "0.4.2"
lz4_flex = "0.11.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"


[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
debug = true

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"
lto = false



